Update start-console.bat