@@ -1,3 +1,3 @@
-java -jar ./sentinel-dashboard.jar
+java --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/sun.net.util=ALL-UNNAMED -jar ./sentinel-dashboard.jar
 
 pause
